# hpi-des-debs2020-grand-challenge

./: CMakeLists.txt  Incremental_Detector.cpp  Incremental_Detector.h  Incremental_Detector_Disorder.cpp  Incremental_Detector_Disorder.h  README.md  main.cpp  query1_NonParallel.cpp  query1_NonParallel.h  query2_NonParallel.cpp  query2_NonParallel.h
